--- a/resultado-service/resultados/src/main/resources/application.properties
+++ b/resultado-service/resultados/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=resultados
+
+logging.level.root=INFO
+logging.level.org.hibernate=DEBUG
+logging.level.org.springframework=DEBUG
+
+spring.datasource.url=jdbc:oracle:thin:@rc0dep960oda1si0_tp?TNS_ADMIN=/Wallet_BaseDatosDuoc
+spring.datasource.username=resultados_service
+spring.datasource.password=Resultados_1_2_3
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
+spring.jpa.hibernate.ddl-auto=create
+
+spring.datasource.hikari.maximum-pool-size= 10
+spring.datasource.hikari.connection-timeout= 30000
+
+server:
+ port: 8082
