--- a/usuario-service/usuarios/src/main/resources/application.properties
+++ b/usuario-service/usuarios/src/main/resources/application.properties
@@ -1,15 +1,18 @@
-server.port=8081
 spring.application.name=usuarios
 
-spring.datasource.url=jdbc:mysql://localhost:3306/laboratorio_usuarios?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=tu_password
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+logging.level.root=INFO
+logging.level.org.hibernate=DEBUG
+logging.level.org.springframework=DEBUG
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.datasource.url=jdbc:oracle:thin:@rc0dep960oda1si0_tp?TNS_ADMIN=/Wallet_BaseDatosDuoc
+spring.datasource.username=usuarios_service
+spring.datasource.password=Usuario_1_2_3
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
+spring.jpa.hibernate.ddl-auto=create
 
-logging.level.org.springframework.web=INFO
-logging.level.com.laboratorio=DEBUG
+spring.datasource.hikari.maximum-pool-size= 10
+spring.datasource.hikari.connection-timeout= 30000
+
+server:
+ port: 8081
