Cambio de nombres de variables y arreglo de dependecias

--- a/usuario-service/usuarios/src/main/resources/application.properties
+++ b/usuario-service/usuarios/src/main/resources/application.properties
@@ -1,12 +1,13 @@
+server.port=8081
 spring.application.name=usuarios
 
 logging.level.root=INFO
 logging.level.org.hibernate=DEBUG
 logging.level.org.springframework=DEBUG
 
-spring.datasource.url=jdbc:oracle:thin:@rc0dep960oda1si0_tp?TNS_ADMIN=/Wallet_BaseDatosDuoc
-spring.datasource.username=usuarios_service
-spring.datasource.password=Usuario_1_2_3
+spring.datasource.url=jdbc:oracle:thin:@rc0dep960oda1si0_tp?TNS_ADMIN=C:/Wallet_BaseDatosDuoc
+spring.datasource.username=User_Spring
+spring.datasource.password=Springboot123
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
 spring.jpa.hibernate.ddl-auto=create
