--- a/usuario-service/usuarios/src/main/resources/application.properties
+++ b/usuario-service/usuarios/src/main/resources/application.properties
@@ -12,6 +12,9 @@ spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
 spring.jpa.hibernate.ddl-auto=create
 
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+
 spring.datasource.hikari.maximum-pool-size= 10
 spring.datasource.hikari.connection-timeout= 30000
 
